--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <div class="navbar">
       <a href="../index.html">Home</a>
-      <a href="aboutus.html">About Us</a>
-      <a href="properties.html">Properties</a>
+      <a href="html/aboutus.html">About Us</a>
+      <a href="html/aboutus.html">Properties</a>
     </div>
 
     <div class="content"> 
