--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="Style.css">
     <title>Home</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
 
 
     <div class="navbar">
-      <a href="../index.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="html/aboutus.html">About Us</a>
       <a href="html/aboutus.html">Properties</a>
     </div>
